crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'empty'::textrange::textmultirange;"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..41
    TypeCast@7..41
      TypeCast@7..25
        AConst@7..14
          Sconst@7..14 "'empty'"
        Typecast@14..16 "::"
        TypeName@16..25
          Ident@16..25 "textrange"
      Typecast@25..27 "::"
      TypeName@27..41
        Ident@27..41 "textmultirange"
  Ascii59@41..42 ";"

