crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@560.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select arraymultirange(arrayrange(ARRAY[2,1], ARRAY[1,2]));"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    FuncCall@7..55
      Ident@7..22 "arraymultirange"
      Ascii40@22..23 "("
      FuncCall@23..55
        Ident@23..33 "arrayrange"
        Ascii40@33..34 "("
        AArrayExpr@34..43
          Array@34..39 "ARRAY"
          Ascii91@39..40 "["
          AConst@40..41
            Iconst@40..41 "2"
          Ascii44@41..42 ","
          AConst@42..43
            Iconst@42..43 "1"
        Ascii93@43..44 "]"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        AArrayExpr@46..55
          Array@46..51 "ARRAY"
          Ascii91@51..52 "["
          AConst@52..53
            Iconst@52..53 "1"
          Ascii44@53..54 ","
          AConst@54..55
            Iconst@54..55 "2"
  Ascii93@55..56 "]"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

