crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@562.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select array[1,3] <@ arraymultirange(arrayrange(array[1,2], array[2,1]));"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..69
    AExpr@7..69
      AArrayExpr@7..16
        Array@7..12 "array"
        Ascii91@12..13 "["
        AConst@13..14
          Iconst@13..14 "1"
        Ascii44@14..15 ","
        AConst@15..16
          Iconst@15..16 "3"
      Ascii93@16..17 "]"
      Whitespace@17..18 " "
      Op@18..20 "<@"
      Whitespace@20..21 " "
      FuncCall@21..69
        Ident@21..36 "arraymultirange"
        Ascii40@36..37 "("
        FuncCall@37..69
          Ident@37..47 "arrayrange"
          Ascii40@47..48 "("
          AArrayExpr@48..57
            Array@48..53 "array"
            Ascii91@53..54 "["
            AConst@54..55
              Iconst@54..55 "1"
            Ascii44@55..56 ","
            AConst@56..57
              Iconst@56..57 "2"
          Ascii93@57..58 "]"
          Ascii44@58..59 ","
          Whitespace@59..60 " "
          AArrayExpr@60..69
            Array@60..65 "array"
            Ascii91@65..66 "["
            AConst@66..67
              Iconst@66..67 "2"
            Ascii44@67..68 ","
            AConst@68..69
              Iconst@68..69 "1"
  Ascii93@69..70 "]"
  Ascii41@70..71 ")"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

