crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@575.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from mr_outparam_succeed3(int4multirange(int4range(1,2)));"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..63
    List@14..63
      FuncCall@14..63
        Ident@14..34 "mr_outparam_succeed3"
        Ascii40@34..35 "("
        FuncCall@35..63
          Ident@35..49 "int4multirange"
          Ascii40@49..50 "("
          FuncCall@50..63
            Ident@50..59 "int4range"
            Ascii40@59..60 "("
            AConst@60..61
              Iconst@60..61 "1"
            Ascii44@61..62 ","
            AConst@62..63
              Iconst@62..63 "2"
  Ascii41@63..64 ")"
  Ascii41@64..65 ")"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

