crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@577.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from mr_outparam_succeed4(int4range(1,2));"
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..48
    List@14..48
      FuncCall@14..48
        Ident@14..34 "mr_outparam_succeed4"
        Ascii40@34..35 "("
        FuncCall@35..48
          Ident@35..44 "int4range"
          Ascii40@44..45 "("
          AConst@45..46
            Iconst@45..46 "1"
          Ascii44@46..47 ","
          AConst@47..48
            Iconst@47..48 "2"
  Ascii41@48..49 ")"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

