crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@579.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from mr_inoutparam_succeed(int4multirange(int4range(1,2)));"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..64
    List@14..64
      FuncCall@14..64
        Ident@14..35 "mr_inoutparam_succeed"
        Ascii40@35..36 "("
        FuncCall@36..64
          Ident@36..50 "int4multirange"
          Ascii40@50..51 "("
          FuncCall@51..64
            Ident@51..60 "int4range"
            Ascii40@60..61 "("
            AConst@61..62
              Iconst@61..62 "1"
            Ascii44@62..63 ","
            AConst@63..64
              Iconst@63..64 "2"
  Ascii41@64..65 ")"
  Ascii41@65..66 ")"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

