crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@581.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from mr_table_succeed(123, int4multirange(int4range(1,11)));"
---
SelectStmt@0..69
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..65
    List@14..65
      FuncCall@14..65
        Ident@14..30 "mr_table_succeed"
        Ascii40@30..31 "("
        AConst@31..34
          Iconst@31..34 "123"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        FuncCall@36..65
          Ident@36..50 "int4multirange"
          Ascii40@50..51 "("
          FuncCall@51..65
            Ident@51..60 "int4range"
            Ascii40@60..61 "("
            AConst@61..62
              Iconst@61..62 "1"
            Ascii44@62..63 ","
            AConst@63..65
              Iconst@63..65 "11"
  Ascii41@65..66 ")"
  Ascii41@66..67 ")"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

