crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@583.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select mr_polymorphic(int4range(1, 4));"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    FuncCall@7..36
      Ident@7..21 "mr_polymorphic"
      Ascii40@21..22 "("
      FuncCall@22..36
        Ident@22..31 "int4range"
        Ascii40@31..32 "("
        AConst@32..33
          Iconst@32..33 "1"
        Ascii44@33..34 ","
        Whitespace@34..35 " "
        AConst@35..36
          Iconst@35..36 "4"
  Ascii41@36..37 ")"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

